--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,8 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://ubiquitous-seahorse-224103.netlify.app/'
+
 languageCode = 'zh-CN' # 设置语言为简体中文
-title = '我的新博客'
+title = 'cwk blog'
 theme = 'ananke'
 
 [params]
-  description = "这是我的个人博客，使用 Hugo 和 Decap CMS 搭建"
+  description = "技术随笔"
