feat: Add Notion sync workflow

--- a/.github/workflows/sync-notion.yml
+++ b/.github/workflows/sync-notion.yml
@@ -1,36 +1,96 @@
-# .github/workflows/sync-notion.yml
-name: Sync Notion to Hugo
+// sync-notion.js (v2 - Manual API Call)
+const fs = require("fs");
+const path = require("path");
+const matter = require("gray-matter");
+const { Martian } = require("@tryfabric/martian");
 
-on:
-  # 允许你手动在 GitHub Actions 页面触发这个工作流
-  workflow_dispatch:
-  # 设置定时任务，例如每6小时运行一次
-  schedule:
-    - cron: '0 */6 * * *'
+// 从环境变量中获取密钥和数据库 ID
+const NOTION_API_KEY = process.env.NOTION_API_KEY;
+const NOTION_DATABASE_ID = process.env.NOTION_DATABASE_ID;
+const postsDir = path.join(__dirname, "content", "posts");
 
-jobs:
-  sync:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+// Hugo 的 frontmatter 模板
+function getFrontmatter(properties) {
+  return {
+    title: properties.Title.title[0]?.plain_text || "",
+    date: properties.Date.date?.start || new Date().toISOString(),
+    tags: properties.Tags.multi_select.map(tag => tag.name),
+    draft: properties.Status.select?.name !== "Published",
+  };
+}
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20' # 使用 Node.js 20 版本
+async function syncNotion() {
+  console.log("Fetching published posts from Notion using manual API call...");
 
-      - name: Install dependencies
-        run: npm install
+  if (!NOTION_API_KEY || !NOTION_DATABASE_ID) {
+    throw new Error("Missing NOTION_API_KEY or NOTION_DATABASE_ID in environment variables.");
+  }
 
-      - name: Sync content from Notion
-        env:
-          NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
-          NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
-        run: node sync-notion.js
+  // 手动构造 API 请求
+  const response = await fetch(`https://api.notion.com/v1/databases/${NOTION_DATABASE_ID}/query`, {
+    method: 'POST',
+    headers: {
+      'Authorization': `Bearer ${NOTION_API_KEY}`,
+      'Content-Type': 'application/json',
+      'Notion-Version': '2022-06-28', // Notion API 版本
+    },
+    body: JSON.stringify({
+      filter: {
+        property: "Status",
+        select: {
+          equals: "Published",
+        },
+      },
+      sorts: [
+        {
+          property: "Date",
+          direction: "descending",
+        },
+      ],
+    }),
+  });
 
-      - name: Commit and push changes
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: "chore: Sync content from Notion"
-          file_pattern: 'content/**/*.md' # 只提交 content 目录下的 md 文件变动
+  if (!response.ok) {
+    const errorBody = await response.json();
+    console.error("Failed to fetch from Notion API:", errorBody);
+    throw new Error(`Notion API request failed with status ${response.status}`);
+  }
+
+  const data = await response.json();
+  const martian = new Martian();
+
+  if (!fs.existsSync(postsDir)) {
+    fs.mkdirSync(postsDir, { recursive: true });
+  }
+
+  for (const page of data.results) {
+    const slug = page.properties.Slug.rich_text[0]?.plain_text;
+    if (!slug) {
+      console.warn(`Page "${page.properties.Title.title[0]?.plain_text}" has no slug. Skipping.`);
+      continue;
+    }
+
+    console.log(`Processing: ${slug}`);
+    
+    const markdownContent = await martian.pageToMarkdown(page.id, { notionClient: { block: { children: { list: () => {
+        // Martian 需要一个 notionClient 来获取页面子块，我们手动模拟这个功能
+        return fetch(`https://api.notion.com/v1/blocks/${page.id}/children`, {
+            headers: { 'Authorization': `Bearer ${NOTION_API_KEY}`, 'Notion-Version': '2022-06-28' }
+        }).then(res => res.json());
+    }}}});
+    
+    const frontmatter = getFrontmatter(page.properties);
+    const fileContent = matter.stringify(markdownContent, frontmatter);
+    const filePath = path.join(postsDir, `${slug}.md`);
+
+    fs.writeFileSync(filePath, fileContent);
+    console.log(`Successfully synced: ${slug}.md`);
+  }
+
+  console.log("Notion sync finished.");
+}
+
+syncNotion().catch(error => {
+  console.error("Sync script failed:", error);
+  process.exit(1); // 确保 Action 会因为错误而失败
+});
