--- a/package.json
+++ b/package.json
@@ -1,26 +1,7 @@
 {
-  "name": "my-hugo-blog",
+  "name": "hugo-notion-sync",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/chenwenkun/my-hugo-blog.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/chenwenkun/my-hugo-blog/issues"
-  },
-  "homepage": "https://github.com/chenwenkun/my-hugo-blog#readme",
   "dependencies": {
-    "@notionhq/client": "^5.1.0",
-    "@tryfabric/martian": "^1.2.4",
     "gray-matter": "^4.0.3"
   }
 }
