🔧 修复GitHub Action推送冲突 + 新增Claude Code文章
✅ 修复问题:
- 修复GitHub Action工作流推送冲突问题
- 添加强制拉取最新更改的步骤
- 使用--force-with-lease安全推送

📝 新增文章:
- Claude Code 安装与调试教程
- Claude Code 实际应用案例 1&2
- What is Claude Code 介绍文章

🚀 改进:
- 自动同步工作流更加稳定
- 避免未来的推送冲突
- 保持Notion内容自动同步

--- a/.github/workflows/sync-notion.yml
+++ b/.github/workflows/sync-notion.yml
@@ -29,8 +29,16 @@ jobs:
           NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
         run: node sync-notion.js
 
+      - name: Pull latest changes
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git pull origin main --rebase || git pull origin main --allow-unrelated-histories
+
       - name: Commit and push changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "chore: Sync content from Notion"
           file_pattern: 'content/**/*.md'
+          push_options: '--force-with-lease'
+          skip_fetch: false
