🎨 完善博客布局和样式
✅ 主要改进:
- 修复模板语法错误，彻底解决引号问题
- 实现左侧标签分类显示，按Claude Code、技术、开发、探索分组
- 添加明显的蓝色分割线区分文章
- 修复文章对齐问题，确保所有文章内容对齐
- 优化响应式设计和悬停效果

🎯 最终效果:
- 左侧25%显示标签分类（只在第一篇文章显示）
- 右侧75%显示文章内容，所有文章完美对齐
- 文章间有3px蓝色分割线，视觉层次清晰
- 当前文章在分类中高亮显示

--- a/hugo.dev.toml
+++ b/hugo.dev.toml
@@ -40,6 +40,10 @@ relativeURLs = true   # 使用相对URL，提升本地访问速度
       unsafe = true
     [markup.goldmark.parser]
       wrapStandAloneImageWithinParagraph = false  # 减少图片处理
+  [markup.tableOfContents]
+    startLevel = 1  # 从1级标题开始，包含所有标题层级
+    endLevel = 6    # 支持到6级标题
+    ordered = false
   [markup.highlight]
     # 本地开发使用更快的语法高亮
     style = "github"
