--- a/hugo.toml
+++ b/hugo.toml
@@ -39,8 +39,8 @@ summaryLength = 150
     [markup.goldmark.renderer]
       unsafe = true
   [markup.tableOfContents]
-    startLevel = 2
-    endLevel = 4
+    startLevel = 1  # 从1级标题开始，包含所有标题层级
+    endLevel = 6    # 支持到6级标题
     ordered = false
   [markup.highlight]
     style = "github"
