--- a/.github/workflows/sync-notion.yml
+++ b/.github/workflows/sync-notion.yml
@@ -29,11 +29,17 @@ jobs:
           NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
         run: node sync-notion.js
 
-      - name: Pull latest changes
+      - name: Pull latest changes and handle conflicts
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git pull origin main --rebase || git pull origin main --allow-unrelated-histories
+          # 暂存任何未提交的更改
+          git add -A
+          git stash --include-untracked || true
+          # 拉取最新更改
+          git pull origin main --rebase || git pull origin main --allow-unrelated-histories || git reset --hard origin/main
+          # 如果有暂存的更改，尝试恢复
+          git stash pop || true
 
       - name: Commit and push changes
         uses: stefanzweifel/git-auto-commit-action@v5
