🔧 最终优化GitHub Action工作流
✅ 进一步改进:
- 跳过额外的fetch检查，避免冲突
- 跳过dirty check，允许强制提交
- 简化工作流逻辑，提高稳定性

🎯 确保Notion同步完全稳定运行

--- a/.github/workflows/sync-notion.yml
+++ b/.github/workflows/sync-notion.yml
@@ -47,4 +47,5 @@ jobs:
           commit_message: "chore: Sync content from Notion"
           file_pattern: 'content/**/*.md'
           push_options: '--force-with-lease'
-          skip_fetch: false
+          skip_fetch: true
+          skip_dirty_check: true
