🔧 彻底修复GitHub Action工作流逻辑
🎯 根本性修复:
- 调整工作流执行顺序：先拉取最新代码，再同步Notion
- 在同步前强制清理和重置到最新状态
- 避免'unstaged changes'错误的根源

💡 逻辑优化:
1. 首先强制重置到远程最新状态
2. 然后安装依赖
3. 最后执行Notion同步
4. 提交同步后的更改

这样确保不会有冲突问题！

--- a/.github/workflows/sync-notion.yml
+++ b/.github/workflows/sync-notion.yml
@@ -20,6 +20,16 @@ jobs:
         with:
           node-version: '20'
 
+      - name: Setup Git and pull latest changes first
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          # 强制清理并拉取最新状态
+          git reset --hard HEAD
+          git clean -fd
+          git fetch origin main
+          git reset --hard origin/main
+
       - name: Install dependencies
         run: npm install
 
@@ -28,18 +38,6 @@ jobs:
           NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
           NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
         run: node sync-notion.js
-
-      - name: Pull latest changes and handle conflicts
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          # 暂存任何未提交的更改
-          git add -A
-          git stash --include-untracked || true
-          # 拉取最新更改
-          git pull origin main --rebase || git pull origin main --allow-unrelated-histories || git reset --hard origin/main
-          # 如果有暂存的更改，尝试恢复
-          git stash pop || true
 
       - name: Commit and push changes
         uses: stefanzweifel/git-auto-commit-action@v5
